# Python-pyls

./: README.md  pyproject.toml  structure.json
pyls.egg-info/: PKG-INFO  SOURCES.txt
