[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A custom ls command in Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Meghashyam", email = "shyamms18@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

[project.scripts]
pyls = "pyls:main"

